--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,5 @@ repositories {
 }
 
 dependencies {
-	testImplementation('org.junit.jupiter:junit-jupiter-api:5.1.0')
-	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.1.0')
-}
-
-test {
-	useJUnitPlatform()
+	testCompile 'junit:junit:4.12'
 }
