--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,10 @@ jobs:
         
       # run tests!
       - run: gradle test
+      
+      - store_test_results:
+        path: test-results
+      
 
 
 
