--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,8 @@ jobs:
       # run tests!
       - run: gradle test
       
+      - run: mkdir test-results
+      
       - store_test_results:
           path: test-results
       
