--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 .project
 test.csv
 /build/
+
+\.gradle/4\.7/fileHashes/fileHashes\.bin
+
+\.gradle/4\.7/fileHashes/fileHashes\.lock
+
+\.gradle/4\.7/taskHistory/taskHistory\.bin
+
+\.gradle/4\.7/taskHistory/taskHistory\.lock
