--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 repositories {
 	mavenCentral()
@@ -7,4 +8,9 @@ repositories {
 dependencies {
 	compile 'com.miglayout:miglayout:3.7.2@jar'
 	testCompile 'junit:junit:4.12'
+}
+
+jacoco {
+	toolVersion = "0.8.1"
+	reportsDir = file("$buildDir/customJacocoReportDir")
 }
